# dadoseanalytics

./: .gitignore  README.md  clinica.sql  createpaciente.py  dados.sql  gerador_faker.py  insert_medicos.py  insert_medicos_clinica.sql  insert_pacientes.py  insert_pacientes.sql  insert_pacientes_clinica.sql  municipio_faker.py  pyproject.toml
